--- a/chatWebApp/web/WEB-INF/web.xml
+++ b/chatWebApp/web/WEB-INF/web.xml
@@ -3,4 +3,190 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
+
+
+    <servlet>
+        <servlet-name>login</servlet-name>
+        <servlet-class>chat.servlets.LoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>login</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+
+
+    <servlet>
+        <servlet-name>fileUpload</servlet-name>
+        <servlet-class>chat.servlets.FileUploadServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>fileUpload</servlet-name>
+        <url-pattern>/upload</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>userList</servlet-name>
+        <servlet-class>chat.servlets.UsersListServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>userList</servlet-name>
+        <url-pattern>/userlist</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>gameList</servlet-name>
+        <servlet-class>chat.servlets.GamesListServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>gameList</servlet-name>
+        <url-pattern>/gamesList</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>logout</servlet-name>
+        <servlet-class>chat.servlets.LogoutServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>logout</servlet-name>
+        <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>joinRoom</servlet-name>
+        <servlet-class>chat.servlets.JoinRoomServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>joinRoom</servlet-name>
+        <url-pattern>/joinRoom</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>joinRoomAsViewer</servlet-name>
+        <servlet-class>chat.servlets.JoinRoomAsViewerServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>joinRoomAsViewer</servlet-name>
+        <url-pattern>/joinRoomAsViewer</url-pattern>
+    </servlet-mapping>
+
+
+    <servlet>
+        <servlet-name>leaveRoom</servlet-name>
+        <servlet-class>chat.servlets.LeaveRoomServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>leaveRoom</servlet-name>
+        <url-pattern>/LeaveRoom</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>gameuserlist</servlet-name>
+        <servlet-class>chat.servlets.GameUsersListServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>gameuserlist</servlet-name>
+        <url-pattern>/gameuserlist</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>gameSettings</servlet-name>
+        <servlet-class>chat.servlets.GameSettingsServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>gameSettings</servlet-name>
+        <url-pattern>/gameSettings</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>gameManagerSettings</servlet-name>
+        <servlet-class>chat.servlets.GameManagerSettingsServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>gameManagerSettings</servlet-name>
+        <url-pattern>/gameManagerSettings</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>getPokerHand</servlet-name>
+        <servlet-class>chat.servlets.PokerHandServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>getPokerHand</servlet-name>
+        <url-pattern>/getPokerHand</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>getPlayerInfo</servlet-name>
+        <servlet-class>chat.servlets.PlayerInGameServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>getPlayerInfo</servlet-name>
+        <url-pattern>/getPlayerInfo</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>getMessageToDisplay</servlet-name>
+        <servlet-class>chat.servlets.MessageToDisplayServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>getMessageToDisplay</servlet-name>
+        <url-pattern>/getMessageToDisplay</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>buy</servlet-name>
+        <servlet-class>chat.servlets.BuyServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>buy</servlet-name>
+        <url-pattern>/buy</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>gameViewers</servlet-name>
+        <servlet-class>chat.servlets.GameViewerListServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>gameViewers</servlet-name>
+        <url-pattern>/gameViewers</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>startNewHand</servlet-name>
+        <servlet-class>chat.servlets.StartNewHand</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>startNewHand</servlet-name>
+        <url-pattern>/startNewHand</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>updatePlayerSelection</servlet-name>
+        <servlet-class>chat.servlets.updatePlayerSelectionServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>updatePlayerSelection</servlet-name>
+        <url-pattern>/updatePlayerSelection</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>chat</servlet-name>
+        <servlet-class>chat.servlets.ChatServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>chat</servlet-name>
+        <url-pattern>/chat</url-pattern>
+    </servlet-mapping>
+
+
+    <servlet>
+        <servlet-name>sendChat</servlet-name>
+        <servlet-class>chat.servlets.SendChatServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>sendChat</servlet-name>
+        <url-pattern>/sendChat</url-pattern>
+    </servlet-mapping>
+
+
 </web-app>
